--- a/genindex.html
+++ b/genindex.html
@@ -225,6 +225,8 @@
 </li>
       <li><a href="api/converter.html#arc.species.converter.add_lone_pairs_by_atom_valance">add_lone_pairs_by_atom_valance() (in module arc.species.converter)</a>
 </li>
+      <li><a href="api/conformers.html#arc.species.conformers.add_missing_symmetric_torsion_values">add_missing_symmetric_torsion_values() (in module arc.species.conformers)</a>
+</li>
       <li><a href="api/converter.html#arc.species.converter.add_rads_by_atom_valance">add_rads_by_atom_valance() (in module arc.species.converter)</a>
 </li>
       <li><a href="api/ssh.html#arc.job.ssh.SSHClient.address">address (arc.job.ssh.SSHClient attribute)</a>
@@ -406,6 +408,8 @@
         <li><a href="api/species.html#arc.species.species.TSGuess.as_dict">(arc.species.species.TSGuess method)</a>
 </li>
       </ul></li>
+      <li><a href="api/level.html#arc.level.assign_frequency_scale_factor">assign_frequency_scale_factor() (in module arc.level)</a>
+</li>
       <li><a href="api/reaction.html#arc.reaction.ARCReaction.atom_map">atom_map (arc.reaction.ARCReaction attribute)</a>
 
       <ul>
@@ -526,6 +530,8 @@
 </li>
       <li><a href="api/species.html#arc.species.species.check_label">check_label() (in module arc.species.species)</a>
 </li>
+      <li><a href="api/scheduler.html#arc.scheduler.Scheduler.check_max_simultaneous_jobs_limit">check_max_simultaneous_jobs_limit() (arc.scheduler.Scheduler method)</a>
+</li>
       <li><a href="api/scheduler.html#arc.scheduler.Scheduler.check_negative_freq">check_negative_freq() (arc.scheduler.Scheduler method)</a>
 </li>
       <li><a href="api/main.html#arc.main.ARC.check_project_name">check_project_name() (arc.main.ARC method)</a>
@@ -550,10 +556,10 @@
 </li>
       <li><a href="api/species.html#arc.species.species.check_xyz">check_xyz() (in module arc.species.species)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/converter.html#arc.species.converter.check_xyz_dict">check_xyz_dict() (in module arc.species.converter)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/species.html#arc.species.species.ARCSpecies.check_xyz_isomorphism">check_xyz_isomorphism() (arc.species.species.ARCSpecies method)</a>
 </li>
       <li><a href="api/plotter.html#arc.plotter.check_xyz_species_for_drawing">check_xyz_species_for_drawing() (in module arc.plotter)</a>
@@ -588,6 +594,8 @@
 </li>
       <li><a href="api/converter.html#arc.species.converter.compare_confs">compare_confs() (in module arc.species.converter)</a>
 </li>
+      <li><a href="api/converter.html#arc.species.converter.compare_confs_fl">compare_confs_fl() (in module arc.species.converter)</a>
+</li>
       <li><a href="api/processor.html#arc.processor.compare_rates">compare_rates() (in module arc.processor)</a>
 </li>
       <li><a href="api/processor.html#arc.processor.compare_thermo">compare_thermo() (in module arc.processor)</a>
@@ -620,10 +628,16 @@
 </li>
       <li><a href="api/species.html#arc.species.species.TSGuess.conformer_index">conformer_index (arc.species.species.TSGuess attribute)</a>
 </li>
-      <li><a href="api/main.html#arc.main.ARC.conformer_level">conformer_level (arc.main.ARC attribute)</a>
+      <li><a href="api/main.html#arc.main.ARC.conformer_opt_level">conformer_opt_level (arc.main.ARC attribute)</a>
 
       <ul>
-        <li><a href="api/scheduler.html#arc.scheduler.Scheduler.conformer_level">(arc.scheduler.Scheduler attribute)</a>
+        <li><a href="api/scheduler.html#arc.scheduler.Scheduler.conformer_opt_level">(arc.scheduler.Scheduler attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="api/main.html#arc.main.ARC.conformer_sp_level">conformer_sp_level (arc.main.ARC attribute)</a>
+
+      <ul>
+        <li><a href="api/scheduler.html#arc.scheduler.Scheduler.conformer_sp_level">(arc.scheduler.Scheduler attribute)</a>
 </li>
       </ul></li>
       <li><a href="api/species.html#arc.species.species.ARCSpecies.conformers">conformers (arc.species.species.ARCSpecies attribute)</a>
@@ -1429,8 +1443,12 @@
         <li><a href="api/scheduler.html#arc.scheduler.Scheduler.output">(arc.scheduler.Scheduler attribute)</a>
 </li>
       </ul></li>
-      <li><a href="api/scheduler.html#arc.scheduler.Scheduler.output_multi_spc">output_multi_spc (arc.scheduler.Scheduler attribute)</a>
+      <li><a href="api/main.html#arc.main.ARC.output_multi_spc">output_multi_spc (arc.main.ARC attribute)</a>
+
+      <ul>
+        <li><a href="api/scheduler.html#arc.scheduler.Scheduler.output_multi_spc">(arc.scheduler.Scheduler attribute)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -1923,12 +1941,12 @@
 </li>
       <li><a href="api/scheduler.html#arc.scheduler.Scheduler.troubleshoot_scan_job">troubleshoot_scan_job() (arc.scheduler.Scheduler method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/trsh.html#arc.job.trsh.trsh_conformer_isomorphism">trsh_conformer_isomorphism() (in module arc.job.trsh)</a>
 </li>
       <li><a href="api/trsh.html#arc.job.trsh.trsh_ess_job">trsh_ess_job() (in module arc.job.trsh)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/main.html#arc.main.ARC.trsh_ess_jobs">trsh_ess_jobs (arc.main.ARC attribute)</a>
 
       <ul>
@@ -1943,9 +1961,19 @@
 </li>
       <li><a href="api/trsh.html#arc.job.trsh.trsh_keyword_checkfile">trsh_keyword_checkfile() (in module arc.job.trsh)</a>
 </li>
+      <li><a href="api/trsh.html#arc.job.trsh.trsh_keyword_inaccurate_quadrature">trsh_keyword_inaccurate_quadrature() (in module arc.job.trsh)</a>
+</li>
       <li><a href="api/trsh.html#arc.job.trsh.trsh_keyword_intaccuracy">trsh_keyword_intaccuracy() (in module arc.job.trsh)</a>
 </li>
+      <li><a href="api/trsh.html#arc.job.trsh.trsh_keyword_l123">trsh_keyword_l123() (in module arc.job.trsh)</a>
+</li>
+      <li><a href="api/trsh.html#arc.job.trsh.trsh_keyword_neg_eigen">trsh_keyword_neg_eigen() (in module arc.job.trsh)</a>
+</li>
+      <li><a href="api/trsh.html#arc.job.trsh.trsh_keyword_no_qc">trsh_keyword_no_qc() (in module arc.job.trsh)</a>
+</li>
       <li><a href="api/trsh.html#arc.job.trsh.trsh_keyword_nosymm">trsh_keyword_nosymm() (in module arc.job.trsh)</a>
+</li>
+      <li><a href="api/trsh.html#arc.job.trsh.trsh_keyword_opt_maxcycles">trsh_keyword_opt_maxcycles() (in module arc.job.trsh)</a>
 </li>
       <li><a href="api/trsh.html#arc.job.trsh.trsh_keyword_scf">trsh_keyword_scf() (in module arc.job.trsh)</a>
 </li>
